<resources>
    <string name="app_name">IEEERemoteCaregiver</string>
    <string name="button_patient">Patient</string>
    <string name="button_caregiver">Caregiver</string>
    <string name="title">DONTFALL4ME</string>
    <string name="title_patient">Patient Page</string>
    <string name="button_notify">Notify</string>
    <string name="button_send">Send</string>
    <string name="button_voicecall">Voice Call</string>
    <string name="button_videocall">Video Call</string>

    <!-- Caregiver -->
    <string name="title_caregiver">Caregiver Page</string>
    <string name="label_connection">Connection</string>
    <string name="label_patient_status">Patient Status</string>
    <string name="button_device_control">Device Control</string>
    <string name="button_device_scan">Device Scan</string>

    <!-- Bluetooth items -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>


    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
</resources>
